Bug 1101128 part 1: Move nsDisplayImage::GetOpaqueRegion() to .cpp file, and label it as MOZ_OVERRIDE. r=seth